 /* $Id: changelog,v 1.850 2000-03-30 10:51:38 sandervl Exp $ */

 2000-03-30: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Also double thread stack in release build
                    (RealPlayer 7 runs out of stack sometimes)

 2000-03-29: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Throw exception when critical section times out
	- USER32:   Fixed bugs in PeekMessageA/W (fixes connection failures
                    & hangs after warning dialogs in RealPlayer 7)
	- GDI32:    Check for NULL region in GetRgnBox; can cause a crash
                    in Open32

 2000-03-29: Christoph Bratschi <cbratschi@datacomm.ch>
	- KERNEL32: added FindFileFirstMultiA for internal usage

 2000-03-28: Markus Montkowski <mmontkowski@gmx.de>
        - KERNEL32: Added workaround for GetDiskFreeSpaceA; Open32 api doesn't
                    like NULL pointers

 2000-03-28: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32: Fixed VirtualQuery; cbLength is length of memory structure,
                    not range of pages
                    Fixed compare of imported api names with length < 4
                    Fixed OpenFile; if filename doesn't contain path, look for
                    it in:
		    1: dir from which the app loaded
                    2: current dir
                    3: windows system dir
                    4: windows dir
                    5: dirs in path path environment variable
          NOTE: Icon extraction in shell32 is broken; expects PE
                images even when looking for icons in shell32.
                (it should use FindResourceExA/W when looking for resources
                 in that case)
	- USER32:   Fixed combobox focus changes when showing dropdown window
        - WSOCK32:  Added support for warp 4 error messages (0 based)
                    Fixed FD_CLOSE async notification (fixes telnet ability
                    to detect lost connections)

 2000-03-28: Christoph Bratschi <cbratschi@datacomm.ch>